--- a/views/movies/detail.ejs
+++ b/views/movies/detail.ejs
@@ -1,46 +1,47 @@
 <div class="container">
-<div class="row justify-content-start">
-    <div class="col-4">
-        <img src = <%= movie.Poster %> height="400">
+    <div class="row justify-content-start">
+        <div class="col-4">
+            <% movie.Poster = movie.Poster !== "N/A" ? movie.Poster : "https://www.csaff.org/wp-content/uploads/csaff-no-poster.jpg" %>
+            <img src = <%= movie.Poster %> height="400">
+        </div>
+        <div class="col-8">
+            <p><strong><%= movie.Title %> (<%= movie.Year %>)</strong></p>
+            <p>Genre: <%= movie.Genre %></p>
+            <p>Director: <%= movie.Director %></p>
+            <p>Actors: <%= movie.Actors %></p>
+            <p>Synopsis: <%= movie.Plot %></p>
+            <p>Language: <%= movie.Language %></p>
+            <% if (movie.Ratings.length > 1) { %>
+                <p>Rotten Tomatoes: <%= movie.Ratings[1].Value %>, imdbRating: <%= movie.imdbRating %></p>
+            <% } %>
+            <div class="row justify-content-start">
+                <div class="col-2">
+                    <form action="/users/watched" method ='POST'>
+                        <input hidden id="movieId" type="text" name="movieId" value="<%= movie.imdbID %>">
+                        <button type="submit" class="btn btn-success">Watched</button>
+                    </form>
+                </div>
+                <div class="col-2">
+                    <form action="/users/watched/undo" method ='POST'>
+                        <input hidden id="movieId" type="text" name="movieId" value="<%= movie.imdbID %>">
+                        <button type="submit" class="btn btn-danger">Not Watched</button>
+                    </form>
+                </div>
+                <div class="col-3">
+                    <form action="/users/watchlist" method ='POST'>
+                        <input hidden id="movieId" type="text" name="movieId" value="<%= movie.imdbID %>">
+                        <button type="submit" class="btn btn-success">Add To Watchlist</button>
+                    </form>
+                </div>
+                <div class="col-3">
+                    <form action="/users/watchlist/undo" method ='POST'>
+                        <input hidden id="movieId" type="text" name="movieId" value="<%= movie.imdbID %>">
+                        <button type="submit" class="btn btn-danger">Remove From Watchlist</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-8">
-        <p><%= movie.Title %> (<%= movie.Year %>)</p>
-        <p>Genre: <%= movie.Genre %></p>
-        <p>Director: <%= movie.Director %></p>
-        <p>Actors: <%= movie.Actors %></p>
-        <p>Synopsis: <%= movie.Plot %></p>
-        <p>Language: <%= movie.Language %></p>
-        <% if (movie.Ratings.length > 1) { %>
-            <p>Rotten Tomatoes: <%= movie.Ratings[1].Value %>, imdbRating: <%= movie.imdbRating %></p>
-        <% } %>
-        <div class="row justify-content-start">
-            <div class="col-2">
-                <form action="/users/watched" method ='POST'>
-                    <input hidden id="movieId" type="text" name="movieId" value="<%= movie.imdbID %>">
-                    <button type="submit" class="btn btn-success">Watched</button>
-                </form>
-            </div>
-            <div class="col-2">
-                <form action="/users/watched/undo" method ='POST'>
-                    <input hidden id="movieId" type="text" name="movieId" value="<%= movie.imdbID %>">
-                    <button type="submit" class="btn btn-danger">Not Watched</button>
-                </form>
-            </div>
-            <div class="col-3">
-                <form action="/users/watchlist" method ='POST'>
-                    <input hidden id="movieId" type="text" name="movieId" value="<%= movie.imdbID %>">
-                    <button type="submit" class="btn btn-success">Add To Watchlist</button>
-                </form>
-            </div>
-            <div class="col-3">
-                <form action="/users/watchlist/undo" method ='POST'>
-                    <input hidden id="movieId" type="text" name="movieId" value="<%= movie.imdbID %>">
-                    <button type="submit" class="btn btn-danger">Remove From Watchlist</button>
-                </form>
-            </div>
-          </div>
-    </div>
-  </div>
 
   <h3>Movie Review</h3>
   <% comments.forEach((comment, i) => { %>
@@ -67,7 +68,7 @@
             <div><strong><%= users[i].name %> </strong> <small><%= comments[i].createdAt %> </small></div>
         <% } %> 
     <% }  else { %> 
-        <div><strong><%= users[i].name %> </strong> <small><%= comments[i].createdAt %> </small></div>
+            <div><strong><%= users[i].name %> </strong> <small><%= comments[i].createdAt %> </small></div>
     <% } %> 
             <p><%= comments[i].content %></p>
  <% })%>
@@ -81,7 +82,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-</div>
+  </div>
 </div>
 
 
