--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,4 @@
 
-<!-- <% movies.forEach((movie) => { %>  
-    <div>
-      <a href="/movies/<%= movie.imdbID %>"><img src="<%= movie.Poster %>" alt="<%= movie.Title %>" >
-      </a>
-    </div>
-  <%}) %> -->
   <div class="container text-center">
     <h3>Popular Movies in 2022</h3>
     <div class="row">
@@ -20,10 +14,11 @@
 
 <% if (user && user.watchedmovies) { %>
     <div class="container text-center">
-        <h3>Watched Movies:</h3>
+        <h3>Watched Movies</h3>
     <div class="row">
         <% user.watchedmovies.forEach((movie) => { %>
       <div class="col-2">
+        <% movie.poster = movie.poster !== "N/A" ? movie.poster : "https://www.csaff.org/wp-content/uploads/csaff-no-poster.jpg" %>
         <a href="/movies/<%= movie.imdbId %>"><img src="<%= movie.poster %>" alt="<%= movie.name %>" height="200" width="auto" ></a>
         <a href="/movies/<%= movie.imdbId %>" style="text-decoration: none; color:black"><p><%= movie.name %><p></a>
       </div>
@@ -32,16 +27,18 @@
     </div>
     <% } %>
 
-    <% if (user && user.watchedmovies) { %>
-        <div class="container text-center">
-            <h3><%= user.name %>'s Watchlist:</h3>
-        <div class="row">
-            <% user.watchlists.forEach((movie) => { %>
+<% if (user && user.watchlists) { %>
+    <div class="container text-center">
+        <h3><%= user.name %>'s Watchlist</h3>
+      <div class="row">
+        <% user.watchlists.forEach((movie) => { %>
           <div class="col-2">
+            <% movie.poster = movie.poster !== "N/A" ? movie.poster : "https://www.csaff.org/wp-content/uploads/csaff-no-poster.jpg" %>
             <a href="/movies/<%= movie.imdbId %>"><img src="<%= movie.poster %>" alt="<%= movie.name %>" height="200" width="auto" ></a>
             <a href="/movies/<%= movie.imdbId %>" style="text-decoration: none; color:black"><p><%= movie.name %><p></a>
           </div>
-          <% }) %>
-        </div>
-        <% } %>
+        <% }) %>
+      </div>
+    </div>
+<% } %>
 
